logo and breaking news create

--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Times </title>
+    <title>BBC World News </title>
 </head>
 <body>
-    
+    <!-- Header -->
+    <header>
+        <div style="background-color: rgb(129, 129, 177); color: white; text-align: center;">
+            <h1 style="font-weight: bold; padding: 1px; "><span> <img src="https://cdn-icons-png.freepik.com/512/4324/4324743.png" alt="icon" style="height: 30px; width: 30px; padding: 1px;"></span> BBC World News</h1>
+        <p style="padding-bottom: 2px;">The Voice of the World news</p>
+        </div>
+        <div>
+            <!-- Breaking news -->
+
+            <marquee style="background-color: rgb(129, 129, 177);padding: 1px; color: white;" behavior="" direction="">Breaking News: Israel-Gzaza War!|   Technology of Business! | Bercelona & Real Madrid L Clasico!</marquee>
+        </div>
+    </header>
 </body>
 </html>
