--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBC World News </title>
+    <!-- Styling -->
+     <style>
+        a{
+            text-decoration: none;
+            color: white;
+            padding-top: 2px;
+            
+        }
+     </style>
 </head>
 <body>
     <!-- Header -->
@@ -17,6 +26,27 @@
 
             <marquee style="background-color: rgb(129, 129, 177);padding: 1px; color: white;" behavior="" direction="">Breaking News: Israel-Gzaza War!|   Technology of Business! | Bercelona & Real Madrid L Clasico!</marquee>
         </div>
+
+        <!-- navbar create -->
+
+        <nav style="text-align: center; background-color: rgb(129, 129, 177);">
+            <a href="#" style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none; margin-right: 10px;">
+                <img style="height: 20px; width: 20px; margin-right: 5px;" src="https://cdn-icons-png.flaticon.com/512/11922/11922419.png" alt=""> Top News
+            </a>&nbsp;
+        
+            <a href="#" style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;">
+                <img style="height: 20px; width: 20px; margin-right: 5px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTufKcoT_bN7ecSKfEU6uhe8HGDL-JmNHs2SA&s" alt=""> Global Diplomacy
+            </a>&nbsp;
+            <a href="#" style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;">
+                <img style="height: 20px; width: 20px; margin-right: 5px;" src="https://cdn-icons-png.flaticon.com/512/900/900967.png" alt=""> Tech Innovations
+            </a>&nbsp;
+            <a href="#" style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;">
+                <img style="height: 20px; width: 20px; margin-right: 5px;" src="https://media.istockphoto.com/id/1225549108/vector/run-sport-exercise-vector-icon-illustration.jpg?s=612x612&w=0&k=20&c=RKFqwoj4U4mw076yakzLoxFxz5MLm1gQI_mU4RVpzp4=" alt=""> Sportes & Space News
+            </a>&nbsp;
+            <a href="#" style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;">
+                <img style="height: 20px; width: 20px; margin-right: 5px;" src="https://cdn-icons-png.flaticon.com/512/3391/3391229.png" alt=""> How To Post
+            </a>
+        </nav>
     </header>
 </body>
 </html>
