top new Section create

--- a/index.html
+++ b/index.html
@@ -1,52 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBC World News </title>
     <!-- Styling -->
-     <style>
-        a{
+    <style>
+        a {
             text-decoration: none;
             color: white;
             padding-top: 2px;
-            
+
         }
-     </style>
+
+        tr,
+        th,
+        td {
+            border: 1px solid gray;
+        }
+        td{
+            padding: 5px;
+        }
+    </style>
 </head>
+
 <body>
     <!-- Header -->
     <header>
         <div style="background-color: rgb(129, 129, 177); color: white; text-align: center;">
-            <h1 style="font-weight: bold; padding: 1px; "><span> <img src="https://cdn-icons-png.freepik.com/512/4324/4324743.png" alt="icon" style="height: 30px; width: 30px; padding: 1px;"></span> BBC World News</h1>
-        <p style="padding-bottom: 2px;">The Voice of the World news</p>
+            <h1 style="font-weight: bold; padding: 1px; "><span> <img
+                        src="https://cdn-icons-png.freepik.com/512/4324/4324743.png" alt="icon"
+                        style="height: 30px; width: 30px; padding: 1px;"></span> BBC World News</h1>
+            <p style="padding-bottom: 2px;">The Voice of the World news</p>
         </div>
         <div>
             <!-- Breaking news -->
 
-            <marquee style="background-color: rgb(129, 129, 177);padding: 1px; color: white;" behavior="" direction="">Breaking News: Israel-Gzaza War!|   Technology of Business! | Bercelona & Real Madrid L Clasico!</marquee>
+            <marquee style="background-color: rgb(129, 129, 177);padding: 1px; color: white;" behavior="" direction="">
+                Breaking News: Israel-Gzaza War!| Technology of Business! | Bercelona & Real Madrid L Clasico!</marquee>
         </div>
 
         <!-- navbar create -->
 
         <nav style="text-align: center; background-color: rgb(129, 129, 177);">
-            <a href="#" style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none; margin-right: 10px;">
-                <img style="height: 20px; width: 20px; margin-right: 5px;" src="https://cdn-icons-png.flaticon.com/512/11922/11922419.png" alt=""> Top News
+            <a href="#"
+                style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none; margin-right: 10px;">
+                <img style="height: 20px; width: 20px; margin-right: 5px;"
+                    src="https://cdn-icons-png.flaticon.com/512/11922/11922419.png" alt=""> Top News
             </a>&nbsp;
-        
-            <a href="#" style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;">
-                <img style="height: 20px; width: 20px; margin-right: 5px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTufKcoT_bN7ecSKfEU6uhe8HGDL-JmNHs2SA&s" alt=""> Global Diplomacy
+
+            <a href="#"
+                style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;">
+                <img style="height: 20px; width: 20px; margin-right: 5px;"
+                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTufKcoT_bN7ecSKfEU6uhe8HGDL-JmNHs2SA&s"
+                    alt=""> Global Diplomacy
             </a>&nbsp;
-            <a href="#" style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;">
-                <img style="height: 20px; width: 20px; margin-right: 5px;" src="https://cdn-icons-png.flaticon.com/512/900/900967.png" alt=""> Tech Innovations
+            <a href="#"
+                style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;">
+                <img style="height: 20px; width: 20px; margin-right: 5px;"
+                    src="https://cdn-icons-png.flaticon.com/512/900/900967.png" alt=""> Tech Innovations
             </a>&nbsp;
-            <a href="#" style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;">
-                <img style="height: 20px; width: 20px; margin-right: 5px;" src="https://media.istockphoto.com/id/1225549108/vector/run-sport-exercise-vector-icon-illustration.jpg?s=612x612&w=0&k=20&c=RKFqwoj4U4mw076yakzLoxFxz5MLm1gQI_mU4RVpzp4=" alt=""> Sportes & Space News
+            <a href="#"
+                style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;">
+                <img style="height: 20px; width: 20px; margin-right: 5px;"
+                    src="https://media.istockphoto.com/id/1225549108/vector/run-sport-exercise-vector-icon-illustration.jpg?s=612x612&w=0&k=20&c=RKFqwoj4U4mw076yakzLoxFxz5MLm1gQI_mU4RVpzp4="
+                    alt=""> Sportes & Space News
             </a>&nbsp;
-            <a href="#" style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;">
-                <img style="height: 20px; width: 20px; margin-right: 5px;" src="https://cdn-icons-png.flaticon.com/512/3391/3391229.png" alt=""> How To Post
+            <a href="#"
+                style="display: inline-flex; align-items: center; justify-content: center; text-decoration: none;">
+                <img style="height: 20px; width: 20px; margin-right: 5px;"
+                    src="https://cdn-icons-png.flaticon.com/512/3391/3391229.png" alt=""> How To Post
             </a>
         </nav>
     </header>
+
+    <!-- main -->
+    <main>
+        <!-- top news section -->
+        <section>
+            <div>
+                <div style="margin-top: 20px; margin-bottom: 10px;">
+                    <a href="#" style="display: inline-flex; align-items: center; color: black; font-weight: bold; font-size: x-large;"><img
+                            style="height: 20px; width: 2opx;"
+                            src="https://st4.depositphotos.com/1842549/21262/i/450/depositphotos_212627314-stock-photo-top-news-icon-internet-button.jpg"
+                            alt=""> Top News</a>
+                </div>
+                <div>
+                    <table style="width: 100%; border-collapse: collapse; table-layout: fixed;">
+                        <thead>
+                            <tr style="background-color:rgb(129, 129, 177);">
+                                <!-- First column with image and text centered -->
+                                <th style="width: 20%;">
+                                    <div
+                                        style=" display: flex; align-items: center; justify-content: center; padding: 10px;">
+                                    <img style="height: 20px; width: 20px; margin-right: 5px;"
+                                        src="https://i.pinimg.com/564x/bb/72/69/bb7269de00fd91f96534454ffdbbdf28.jpg"
+                                        alt="">
+                                    Category
+                                    </div>
+                                </th>
+
+                                <!-- Second column with image and text centered -->
+                                <th style="width: 50%;">
+                                    <div
+                                        style=" display: flex; align-items: center; justify-content: center; padding: 10px;">
+                                    <img style="height: 20px; width: 20px; margin-right: 5px;"
+                                        src="https://cdn-icons-png.flaticon.com/512/6422/6422877.png"
+                                        alt="">
+                                    Headline
+                                    </div>
+                                </th>
+
+                                <!-- Third column with image and text centered -->
+                                <th style="width: 30%;">
+                                    <div
+                                        style=" display: flex; align-items: center; justify-content: center; padding: 10px;">
+                                    <img style="height: 20px; width: 20px; margin-right: 5px;"
+                                        src="https://thumbs.dreamstime.com/b/calendar-date-date-notes-business-office-event-icon-template-black-color-editable-calendar-date-symbol-flat-vector-illustration-171286982.jpg"
+                                        alt="">
+                                    Date
+                                    </div>
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                               <td>Word</td>
+                               <td>Israel-Graza WAr</td>
+                               <td>12/09/2024</td>
+                            </tr>
+                            <tr>
+                               <td>Business</td>
+                               <td>Technology of Business</td>
+                               <td>5/09/2024</td>
+                            </tr>
+                            <tr>
+                               <td>Spots</td>
+                               <td>Bercelona & Real Madrid L Clasico</td>
+                               <td>18/09/2024</td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
+
 </html>
