global deplecy and tech innovation section create

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         td {
             border: 1px solid gray;
         }
-        td{
+
+        td {
             padding: 5px;
         }
     </style>
@@ -80,8 +81,9 @@
         <!-- top news section -->
         <section>
             <div>
-                <div style="margin-top: 20px; margin-bottom: 10px;">
-                    <a href="#" style="display: inline-flex; align-items: center; color: black; font-weight: bold; font-size: x-large;"><img
+                <div style="margin-top: 30px; margin-bottom: 20px;">
+                    <a href="#"
+                        style="display: inline-flex; align-items: center; color: black; font-weight: bold; font-size: x-large;"><img
                             style="height: 20px; width: 2opx;"
                             src="https://st4.depositphotos.com/1842549/21262/i/450/depositphotos_212627314-stock-photo-top-news-icon-internet-button.jpg"
                             alt=""> Top News</a>
@@ -89,15 +91,15 @@
                 <div>
                     <table style="width: 100%; border-collapse: collapse; table-layout: fixed;">
                         <thead>
-                            <tr style="background-color:rgb(129, 129, 177);">
+                            <tr style="background-color:rgb(129, 129, 177); color: white;">
                                 <!-- First column with image and text centered -->
                                 <th style="width: 20%;">
                                     <div
                                         style=" display: flex; align-items: center; justify-content: center; padding: 10px;">
-                                    <img style="height: 20px; width: 20px; margin-right: 5px;"
-                                        src="https://i.pinimg.com/564x/bb/72/69/bb7269de00fd91f96534454ffdbbdf28.jpg"
-                                        alt="">
-                                    Category
+                                        <img style="height: 20px; width: 20px; margin-right: 5px;"
+                                            src="https://i.pinimg.com/564x/bb/72/69/bb7269de00fd91f96534454ffdbbdf28.jpg"
+                                            alt="">
+                                        Category
                                     </div>
                                 </th>
 
@@ -105,10 +107,9 @@
                                 <th style="width: 50%;">
                                     <div
                                         style=" display: flex; align-items: center; justify-content: center; padding: 10px;">
-                                    <img style="height: 20px; width: 20px; margin-right: 5px;"
-                                        src="https://cdn-icons-png.flaticon.com/512/6422/6422877.png"
-                                        alt="">
-                                    Headline
+                                        <img style="height: 20px; width: 20px; margin-right: 5px;"
+                                            src="https://cdn-icons-png.flaticon.com/512/6422/6422877.png" alt="">
+                                        Headline
                                     </div>
                                 </th>
 
@@ -116,29 +117,29 @@
                                 <th style="width: 30%;">
                                     <div
                                         style=" display: flex; align-items: center; justify-content: center; padding: 10px;">
-                                    <img style="height: 20px; width: 20px; margin-right: 5px;"
-                                        src="https://thumbs.dreamstime.com/b/calendar-date-date-notes-business-office-event-icon-template-black-color-editable-calendar-date-symbol-flat-vector-illustration-171286982.jpg"
-                                        alt="">
-                                    Date
+                                        <img style="height: 20px; width: 20px; margin-right: 5px;"
+                                            src="https://thumbs.dreamstime.com/b/calendar-date-date-notes-business-office-event-icon-template-black-color-editable-calendar-date-symbol-flat-vector-illustration-171286982.jpg"
+                                            alt="">
+                                        Date
                                     </div>
                                 </th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                               <td>Word</td>
-                               <td>Israel-Graza WAr</td>
-                               <td>12/09/2024</td>
+                                <td>Word</td>
+                                <td>Israel-Graza WAr</td>
+                                <td>12/09/2024</td>
                             </tr>
                             <tr>
-                               <td>Business</td>
-                               <td>Technology of Business</td>
-                               <td>5/09/2024</td>
+                                <td>Business</td>
+                                <td>Technology of Business</td>
+                                <td>5/09/2024</td>
                             </tr>
                             <tr>
-                               <td>Spots</td>
-                               <td>Bercelona & Real Madrid L Clasico</td>
-                               <td>18/09/2024</td>
+                                <td>Spots</td>
+                                <td>Bercelona & Real Madrid L Clasico</td>
+                                <td>18/09/2024</td>
                             </tr>
                         </tbody>
                     </table>
@@ -146,6 +147,80 @@
                 </div>
             </div>
         </section>
+        <!-- golobal diplomacy section -->
+        <section>
+            <div>
+                <div style="margin-top: 30px; margin-bottom: 10px; background-color: rgb(129, 129, 177); padding: 5px;">
+                    <a href="#"
+                        style="display: inline-flex; align-items: center; color: black; font-weight: bold; font-size: x-large;"><img
+                            style="height: 20px; width: 2opx;"
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTufKcoT_bN7ecSKfEU6uhe8HGDL-JmNHs2SA&s"
+                            alt="">&nbsp; Global Diplomacy</a>
+                </div>
+                <div>
+                    <div>
+                        <img style="height: 200px; width: 200px;" src="https://cdn.edflex.com/media/uploads/mooc/logo/e86e84d1d3547004604e279607c7478a8d9a35df.jpg?width=360&height=200" alt="">
+                    </div>
+                    <div style="display: inline-flex; align-items: center;">
+                        <h3><img style="height: 20px; width: 20px;"
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTufKcoT_bN7ecSKfEU6uhe8HGDL-JmNHs2SA&s"
+                                alt="">&nbsp;Global summit Held</h3>
+                    </div>
+                    <div>
+                        <div style="display: inline-flex; align-items: center;">
+                            <h3><img style="height: 20px; width: 20px;"
+                                    src="https://t3.ftcdn.net/jpg/08/09/12/38/360_F_809123844_8I6DioVqAa7ahrk2MbRMDbScZS0IQfFZ.jpg"
+                                    alt="">&nbsp;Publishet: Nobember 18, 2024</h3>
+                        </div>
+                    </div>
+                    <div>
+                        <div style="display: inline-flex; align-items: center;">
+                            <span><img style="height: 20px; width: 20px;"
+                                    src="https://cdn3.iconfinder.com/data/icons/navigation-67/32/Next_read_more_right-512.png"
+                                    alt=""> Read more...</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- tech innovatons section -->
+         <section>
+            <section>
+                <div>
+                    <div style="margin-top: 30px; margin-bottom: 10px; background-color: rgb(129, 129, 177); padding: 5px;">
+                        <a href="#"
+                            style="display: inline-flex; align-items: center; color: black; font-weight: bold; font-size: x-large;"><img
+                                style="height: 20px; width: 2opx;"
+                                src="https://cdn-icons-png.flaticon.com/512/900/900967.png"
+                                alt="">&nbsp; Tech Innovations</a>
+                    </div>
+                    <div>
+                        <div>
+                            <img style="height: 200px; width: 200px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSSA2T-fLy17uGOhsYdH9RoL6UKqV-HEvNCA&s" alt="">
+                        </div>
+                        <div style="display: inline-flex; align-items: center;">
+                            <h3><img style="height: 20px; width: 20px;"
+                                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTufKcoT_bN7ecSKfEU6uhe8HGDL-JmNHs2SA&s"
+                                    alt="">&nbsp;Ai Revulutionizes Business</h3>
+                        </div>
+                        <div>
+                            <div style="display: inline-flex; align-items: center;">
+                                <h3><img style="height: 20px; width: 20px;"
+                                        src="https://t3.ftcdn.net/jpg/08/09/12/38/360_F_809123844_8I6DioVqAa7ahrk2MbRMDbScZS0IQfFZ.jpg"
+                                        alt="">&nbsp;Publishet: Nobember 10, 2024</h3>
+                            </div>
+                        </div>
+                        <div>
+                            <div style="display: inline-flex; align-items: center;">
+                                <span><img style="height: 20px; width: 20px;"
+                                        src="https://cdn3.iconfinder.com/data/icons/navigation-67/32/Next_read_more_right-512.png"
+                                        alt=""> Read more...</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+         </section>
     </main>
 
 </body>
