feedback, post and footer create

--- a/index.html
+++ b/index.html
@@ -152,25 +152,54 @@
             <div>
                 <div style="margin-top: 30px; margin-bottom: 10px; background-color: rgb(129, 129, 177); padding: 5px;">
                     <a href="#"
-                        style="display: inline-flex; align-items: center; color: black; font-weight: bold; font-size: x-large;"><img
+                        style="display: inline-flex; align-items: center; color:white; font-weight: bold; font-size: x-large;"><img
                             style="height: 20px; width: 2opx;"
                             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTufKcoT_bN7ecSKfEU6uhe8HGDL-JmNHs2SA&s"
                             alt="">&nbsp; Global Diplomacy</a>
                 </div>
                 <div>
                     <div>
-                        <img style="height: 200px; width: 200px;" src="https://cdn.edflex.com/media/uploads/mooc/logo/e86e84d1d3547004604e279607c7478a8d9a35df.jpg?width=360&height=200" alt="">
+                        <img style="height: 200px; width: 200px;"
+                            src="https://cdn.edflex.com/media/uploads/mooc/logo/e86e84d1d3547004604e279607c7478a8d9a35df.jpg?width=360&height=200"
+                            alt="">
                     </div>
                     <div style="display: inline-flex; align-items: center;">
-                        <h3><img style="height: 20px; width: 20px;"
+                        <h5><img style="height: 20px; width: 20px;"
                                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTufKcoT_bN7ecSKfEU6uhe8HGDL-JmNHs2SA&s"
-                                alt="">&nbsp;Global summit Held</h3>
+                                alt="">&nbsp;Global summit Held</h5>
                     </div>
                     <div>
                         <div style="display: inline-flex; align-items: center;">
-                            <h3><img style="height: 20px; width: 20px;"
+                            <h5><img style="height: 20px; width: 20px;"
                                     src="https://t3.ftcdn.net/jpg/08/09/12/38/360_F_809123844_8I6DioVqAa7ahrk2MbRMDbScZS0IQfFZ.jpg"
-                                    alt="">&nbsp;Publishet: Nobember 18, 2024</h3>
+                                    alt="">&nbsp;Publishet: Nobember 18, 2024</h5>
+                        </div>
+                    </div>
+                    <div>
+                        <div style="display: inline-flex; align-items: center;">
+                            <span><img style="height: 20px; width: 20px;"
+                                    src="https://cdn3.iconfinder.com/data/icons/navigation-67/32/Next_read_more_right-512.png"
+                                    alt=""> Read more...</span>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div>
+                    <div>
+                        <img style="height: 200px; width: 200px;"
+                            src="https://media.istockphoto.com/id/1298311995/vector/international-negotiations-diplomacy-political-meeting-at-round-table-concept-delegates.jpg?s=612x612&w=0&k=20&c=PR3xArTAtz5smtkyHomUB2ZAnlRePBK-ZeX8HqObF8g="
+                            alt="">
+                    </div>
+                    <div style="display: inline-flex; align-items: center;">
+                        <h5><img style="height: 20px; width: 20px;"
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTufKcoT_bN7ecSKfEU6uhe8HGDL-JmNHs2SA&s"
+                                alt="">&nbsp;New Trade Agrements</h5>
+                    </div>
+                    <div>
+                        <div style="display: inline-flex; align-items: center;">
+                            <h5><img style="height: 20px; width: 20px;"
+                                    src="https://t3.ftcdn.net/jpg/08/09/12/38/360_F_809123844_8I6DioVqAa7ahrk2MbRMDbScZS0IQfFZ.jpg"
+                                    alt="">&nbsp;Publishet: Nobember 17, 2024</h5>
                         </div>
                     </div>
                     <div>
@@ -184,44 +213,120 @@
             </div>
         </section>
         <!-- tech innovatons section -->
-         <section>
-            <section>
+        <section>
+            <div>
+                <div style="margin-top: 30px; margin-bottom: 10px; background-color: rgb(129, 129, 177); padding: 5px;">
+                    <a href="#"
+                        style="display: inline-flex; align-items: center; color: black; font-weight: bold; font-size: x-large; color: white;"><img
+                            style="height: 20px; width: 2opx;"
+                            src="https://cdn-icons-png.flaticon.com/512/900/900967.png" alt="">&nbsp; Tech
+                        Innovations
+                    </a>
+                </div>
                 <div>
-                    <div style="margin-top: 30px; margin-bottom: 10px; background-color: rgb(129, 129, 177); padding: 5px;">
-                        <a href="#"
-                            style="display: inline-flex; align-items: center; color: black; font-weight: bold; font-size: x-large;"><img
-                                style="height: 20px; width: 2opx;"
-                                src="https://cdn-icons-png.flaticon.com/512/900/900967.png"
-                                alt="">&nbsp; Tech Innovations</a>
+                    <div>
+                        <img style="height: 200px; width: 200px;"
+                            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSSA2T-fLy17uGOhsYdH9RoL6UKqV-HEvNCA&s"
+                            alt="">
+                    </div>
+                    <div style="display: inline-flex; align-items: center;">
+                        <h5><img style="height: 20px; width: 20px;"
+                                src="https://cdn-icons-png.flaticon.com/512/900/900967.png" alt="">&nbsp;Ai
+                            Revulutionizes Business</h5>
                     </div>
                     <div>
-                        <div>
-                            <img style="height: 200px; width: 200px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRSSA2T-fLy17uGOhsYdH9RoL6UKqV-HEvNCA&s" alt="">
-                        </div>
                         <div style="display: inline-flex; align-items: center;">
-                            <h3><img style="height: 20px; width: 20px;"
-                                    src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTufKcoT_bN7ecSKfEU6uhe8HGDL-JmNHs2SA&s"
-                                    alt="">&nbsp;Ai Revulutionizes Business</h3>
+                            <h5><img style="height: 20px; width: 20px;"
+                                    src="https://t3.ftcdn.net/jpg/08/09/12/38/360_F_809123844_8I6DioVqAa7ahrk2MbRMDbScZS0IQfFZ.jpg"
+                                    alt="">&nbsp;Publishet: Nobember 10, 2024</h5>
                         </div>
-                        <div>
-                            <div style="display: inline-flex; align-items: center;">
-                                <h3><img style="height: 20px; width: 20px;"
-                                        src="https://t3.ftcdn.net/jpg/08/09/12/38/360_F_809123844_8I6DioVqAa7ahrk2MbRMDbScZS0IQfFZ.jpg"
-                                        alt="">&nbsp;Publishet: Nobember 10, 2024</h3>
-                            </div>
-                        </div>
-                        <div>
-                            <div style="display: inline-flex; align-items: center;">
-                                <span><img style="height: 20px; width: 20px;"
-                                        src="https://cdn3.iconfinder.com/data/icons/navigation-67/32/Next_read_more_right-512.png"
-                                        alt=""> Read more...</span>
-                            </div>
+                    </div>
+                    <div>
+                        <div style="display: inline-flex; align-items: center;">
+                            <span><img style="height: 20px; width: 20px;"
+                                    src="https://cdn3.iconfinder.com/data/icons/navigation-67/32/Next_read_more_right-512.png"
+                                    alt=""> Read more...</span>
                         </div>
                     </div>
                 </div>
-            </section>
-         </section>
+            </div>
+        </section>
+        <!-- form section -->
+        <section>
+            <div>
+                <div>
+                    <div
+                        style="margin-top: 30px; margin-bottom: 10px; background-color: rgb(129, 129, 177); padding: 5px; color: white;">
+                        <a href="#"
+                            style="display: inline-flex; align-items: center; color: white; font-weight: bold; font-size: x-large;"><img
+                                style="height: 20px; width: 2opx;"
+                                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiIV8H5CLWM1SBnex6GR8cuscUX6_wyIcr9UESum3w3hB8J4ClwQqcA59pPixd16yS2AM&usqp=CAU"
+                                alt="">&nbsp; Submit Your News</a>
+                    </div>
+                    <div>
+                        <fieldset>
+                            <legend>Feedback Form</legend>
+                            <form action="">
+                                <label for="name" id="name">Name:</label><br>
+                                <input type="text" placeholder="Enter your name"><br><br>
+                                <label for="email">Email:</label><br>
+                                <input type="email" placeholder="Enter your email"><br><br>
+                                <label for="Feedback">Feedback:</label><br>
+                                <textarea placeholder="Enter your Feedback" name="" id="" cols="22"
+                                    rows="5"></textarea><br><br>
+                            </form>
+                            <div>
+                                <button type="submit"><img style="height: 10px; width: 10px;"
+                                        src="https://img.freepik.com/premium-vector/paper-plane-black-fill-icon_1076610-66056.jpg"
+                                        alt=""> Submit</button>
+                            </div>
+
+                        </fieldset>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- post section -->
+        <section>
+            <div>
+                <div style="margin-top: 30px; margin-bottom: 10px; background-color: rgb(129, 129, 177); padding: 5px;">
+                    <a href="#"
+                        style="display: inline-flex; align-items: center; color: black; font-weight: bold; font-size: x-large; color: white;"><img
+                            style="height: 20px; width: 2opx;"
+                            src="https://img.freepik.com/premium-vector/paper-plane-black-fill-icon_1076610-66056.jpg"
+                            alt="">&nbsp; HOw to Post
+                    </a>
+                </div>
+                <div>
+                    <video width="100%" height="500" controls>
+                        <source src="movie.mp4" type="video/mp4">
+                    </video>
+                </div>
+            </div>
+        </section>
     </main>
+    <!-- footer -->
+    <footer style="background-color: rgb(129, 129, 177); margin-top: 30px; bottom: 5px;">
+        <div style="text-align: center; color: white; padding-top: 20px;">
+            <h5>&copy; 2024 BBC World News | All Rights Reserved</h5>
+        </div>
+        <div style="display: flex; align-items: center; justify-content: center; color: white;">
+            <div>
+                <h5>Follow us: &nbsp; </h5>
+            </div>
+            <div style="display: flex; align-items: center; justify-content: center;">
+                <div>
+                    <img style="height: 20px; width: 20px;" src="./img/facebook.png" alt="">
+                </div>&nbsp;&nbsp;
+                <div>
+                    <img style="height: 20px; width: 20px;" src="./img/instagram.png" alt="">
+                </div>&nbsp;&nbsp;
+                <div>
+                    <img style="height: 20px; width: 20px;" src="./img/twitter.png" alt="">
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
